feat: standardize all technical documentation pages for better learning experience
- Updated 87 technical pages to consistent learning-focused structure
- Applied standardized format: Learning Resources → Understanding → Stay Updated
- Removed implementation details in favor of curated learning resources
- Added comprehensive resource sections for each technology
- Consolidated sidebar from 179 to 97 focused technical topics
- Removed checkmark emojis from technical index for cleaner navigation
- Fixed MDX build issues with ElasticON conference references